[package]
description = "Wrapper around the Quantum Exact Simulation Toolkit (QuEST)"
edition = "2021"
homepage = "https://github.com/marek-miller/quest_bind"
keywords = ["quantum", "circuit", "simulator", "wrapper"]
license = "MIT"
name = "quest_bind"
readme = "README.md"
repository = "https://github.com/marek-miller/quest_bind.git"
version = "0.3.4"

[features]
f32 = []
gpu = []
mpi = []

[dependencies]
crossbeam = "0.8.2"
log = "0.4.19"
num = "0.4.0"
rand = "0.8.5"

[build-dependencies]
cmake = "0.1.50"
